--- a/product.html
+++ b/product.html
@@ -1,67 +1,99 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalle del Producto</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/tan-songbird" rel="stylesheet">
-     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalle del Producto</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/tan-songbird" rel="stylesheet">
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
   <link rel="shortcut icon" href="./assets/images/favicon-32x32.png">
 </head>
 
 <body>
-    <main class="product-detail">
-        <div class="container">
-            <h1 id="product-name"></h1>
-            <div class="product-image-wrapper">
-                <img id="product-image" alt="Imagen del producto">
-            </div>
-            <div class="product-info">
-                <h3>Ingredientes</h3>
-                <ul id="product-ingredients"></ul>
+      <main class="product-detail">
+            <div class="container">
+                  <h1 id="product-name"></h1>
 
-                <h3>Descripción</h3>
-                <p id="product-recipe"></p>
+                  <div class="product-image-wrapper">
+                        <img id="product-image" alt="Imagen del producto">
+                    </div>
 
-                <div class="product-buttons">
-                    <a href="https://www.instagram.com/aufourenchante" target="_blank" class="btn-instagram instagram">Ver más en
-                        Instagram</a>
-                    <a href="index.html" class="btn-back">← Volver</a>
-                </div>
+                  <div id="intolerances" class="intolerances-box"></div>
+
+                  <div class="product-info">
+                        <h3 data-i18n="product.ingredients">Ingredientes</h3>
+                        <ul id="product-ingredients"></ul>
+
+                        <h3 data-i18n="product.description">Descripción</h3>
+                        <p id="product-recipe"></p>
+
+                        <div class="product-buttons">
+                              <a href="https://www.instagram.com/aufourenchante" target="_blank"
+            class="btn-instagram instagram" data-i18n="product.instagram">Ver más en Instagram</a>
+                              <a href="index.html" class="btn-back" data-i18n="product.back">← Volver</a>
+                          </div>
+                    </div>
+              </div>
+        </main>
+
+  <script>
+    const product = JSON.parse(localStorage.getItem("selectedProduct"));
+    const currentLang = localStorage.getItem("selectedLanguage") || "es";
+
+    if (product) {
+      // Si la traducción para el idioma actual no existe, usa 'es' (Español)
+      const t = product.translations[currentLang] || product.translations.es;
+
+      document.getElementById("product-name").textContent = t.name;
+      document.getElementById("product-image").src = product.image;
+      document.getElementById("product-image").alt = t.name;
+
+      const ingredientsList = document.getElementById("product-ingredients");
+      ingredientsList.innerHTML = "";
+
+      // Comprobación para t.ingredients
+      if (t.ingredients && Array.isArray(t.ingredients)) {
+        t.ingredients.forEach(item => {
+          const li = document.createElement("li");
+          li.textContent = item;
+          ingredientsList.appendChild(li);
+        });
+      }
+
+      document.getElementById("product-recipe").textContent = t.recipe;
+
+      /* INTOLERANCIAS */
+      const intolerancesDiv = document.getElementById("intolerances");
+
+      // Comprobación añadida para Intolerancias
+      if (product.intolerancesText && product.icons) {
+        let text = product.intolerancesText[currentLang] || product.intolerancesText.es;
+        let icons = product.icons;
+
+        let html = `<p class='intolerances-text'>${text}</p><div class='intolerances-icons'>`;
+
+        if (Array.isArray(icons)) {
+          icons.forEach(icon => {
+            html += `<img src='${icon}' alt='intolerancia'>`;
+          });
+        }
+
+        html += "</div>";
+
+        intolerancesDiv.innerHTML = html;
+      }
 
 
-            </div>
-        </div>
-    </main>
+    } else {
+      document.body.innerHTML = "<p style='text-align:center;'>No se encontró el producto.</p>";
+    }
+  </script>
+  <script src="./js/lang.js"></script>
 
- <script>
-  const product = JSON.parse(localStorage.getItem("selectedProduct"));
-  const currentLang = localStorage.getItem("selectedLanguage") || "es";
-
-  if (product && product.translations && product.translations[currentLang]) {
-    const t = product.translations[currentLang];
-
-    document.getElementById("product-name").textContent = t.name;
-    document.getElementById("product-image").src = product.image;
-    document.getElementById("product-image").alt = t.name;
-
-    const ingredientsList = document.getElementById("product-ingredients");
-    ingredientsList.innerHTML = ''; // Limpiar por si acaso
-    t.ingredients.forEach(item => {
-      const li = document.createElement("li");
-      li.textContent = item;
-      ingredientsList.appendChild(li);
-    });
-
-    document.getElementById("product-recipe").textContent = t.recipe;
-  } else {
-    document.body.innerHTML = "<p style='text-align:center;'>No se encontró el producto.</p>";
-  }
-</script>
 </body>
 
 </html>
