Se modificaron los metadatos de la pagina

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
   <link rel="shortcut icon" href="./assets/images/favicon-32x32.png">
+
+
+  <meta property="og:title" content="Au Four Enchanté" />
+  <meta property="og:description" content="Descubre la calidez de la gastronomía argentina fusionada con la técnica francesa. Productos frescos y hechos con amor en Valencia." />
+  <meta property="og:image" content="https://www.tudominio.com/assets/images/logo.png" />
+  <meta property="og:url" content="https://aufourenchante.netlify.app/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image">
+
+
 </head>
 
 <body>
