Se modifican errores de metadatos

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <meta property="og:title" content="Au Four Enchanté" />
   <meta property="og:description" content="Descubre la calidez de la gastronomía argentina fusionada con la técnica francesa. Productos frescos y hechos con amor en Valencia." />
-  <meta property="og:image" content="https://www.tudominio.com/assets/images/logo.png" />
-  <meta property="og:url" content="https://aufourenchante.netlify.app/" />
+  <meta property="og:image" content="https://aufourenchante.netlify.app/assets/images/logo.png" />
+  <meta property="og:url" content="https://aufourenchante.netlify.app" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image">
 
