--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="./assets/images/favicon-32x32.png">
 </head>
 
-<body>
+<body class="body-product">
   <main class="product-detail">
     <div class="container">
       <h1 id="product-name"></h1>
@@ -30,12 +30,14 @@
             <video id="product-video" loop muted playsinline></video>
           </div>
 
+          <div class="slider-arrows">
+            <button id="arrow-left" class="slider-arrow">&#10094;</button>
+            <button id="arrow-right" class="slider-arrow">&#10095;</button>
+          </div>
+
         </div>
 
-        <div id="slider-controls" class="slider-controls">
-          <span id="control-image" class="slider-dot active-dot"></span>
-          <span id="control-video" class="slider-dot"></span>
-        </div>
+
 
 
       </div>
@@ -92,23 +94,22 @@
 
       const videoElement = document.getElementById("product-video");
       const mediaVideoDiv = document.getElementById("media-video");
-      const controlVideo = document.getElementById("control-video");
       const mediaImageDiv = document.getElementById("media-image");
-      const controlImage = document.getElementById("control-image");
-      const sliderControls = document.getElementById("slider-controls");
+
+      const arrowLeft = document.getElementById("arrow-left");
+      const arrowRight = document.getElementById("arrow-right");
 
       document.getElementById("product-name").textContent = t.name || "";
       document.getElementById("product-image").src = product.image || "";
       document.getElementById("product-image").alt = t.name || "";
 
-      // Carga el video si existe
       if (product.video) {
         videoElement.src = product.video;
         videoElement.load();
       } else {
-        // Si no hay video, ocultar el control
-        if (controlVideo) controlVideo.style.display = 'none';
-        if (sliderControls) sliderControls.style.display = 'none';
+        mediaVideoDiv.style.display = 'none';
+        arrowLeft.style.display = 'none';
+        arrowRight.style.display = 'none';
       }
 
       const ingredientsList = document.getElementById("product-ingredients");
@@ -130,37 +131,31 @@
         let html = `<p class="intolerances-text">${text}</p><div class="intolerances-icons">`;
         product.intolerances.forEach(type => {
           const icon = intoleranceIcons[currentLang][type];
-          if (icon) {
-            html += `<img src="${icon}" alt="${type}">`;
-          }
+          if (icon) html += `<img src="${icon}" alt="${type}">`;
         });
         html += `</div>`;
         intolerancesDiv.innerHTML = html;
       }
 
-      /* --- Lógica del Slider/Toggle (Imagen <-> Video) --- */
-      if (product.video) {
-        function showImage() {
-          mediaImageDiv.classList.add('active');
-          mediaVideoDiv.classList.remove('active');
-          controlImage.classList.add('active-dot');
-          controlVideo.classList.remove('active-dot');
-          videoElement.pause();
-          videoElement.currentTime = 0; // Opcional: reiniciar el video
-        }
+      // Función para mostrar imagen
+      function showImage() {
+        mediaImageDiv.classList.add('active');
+        mediaVideoDiv.classList.remove('active');
+        videoElement.pause();
+        videoElement.currentTime = 0;
+      }
 
-        function showVideo() {
-          mediaImageDiv.classList.remove('active');
-          mediaVideoDiv.classList.add('active');
-          controlImage.classList.remove('active-dot');
-          controlVideo.classList.add('active-dot');
-          videoElement.play();
-        }
+      // Función para mostrar video
+      function showVideo() {
+        mediaImageDiv.classList.remove('active');
+        mediaVideoDiv.classList.add('active');
+        videoElement.play();
+      }
 
-        if (controlImage && controlVideo) {
-          controlImage.addEventListener('click', showImage);
-          controlVideo.addEventListener('click', showVideo);
-        }
+      // Event listeners flechas
+      if (arrowLeft && arrowRight && product.video) {
+        arrowLeft.addEventListener("click", showImage);
+        arrowRight.addEventListener("click", showVideo);
       }
 
     } else {
