--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <nav>
         <ul class="nav-list">
           <li><a href="#about" data-i18n="nav.about">Sobre mí</a></li>
-          <li><a href="#project" data-i18n="nav.project">El Proyecto</a></li>
+          <li><a href="https://wa.me/c/34611889972" target="_blank" data-i18n="nav.shop">Tienda</a></li>
           <li><a href="#products" data-i18n="nav.products">Productos</a></li>
         </ul>
       </nav>
